==============
Change History
==============

unreleased
==========

 - reduced start/stop wait times in mysql layer

 - use modification times in layer sql script change checking
   additionally to the paths. this way the test dump is only used if
   the sql scripts have not been modified since the last test run.

 - stop sql servers when runscripts fails in layer setup because
   otherwise the server still runs after the testrunner exited.

 - allow to define a defaults file in mysql layer

 - fixed cassandra layer download url

 - removed dependency to ``zc.buildout`` which is now in an extra
   called ``cassandra`` because it is only needed for downloading
   cassandra.

 - removed dependency to ``zope.testing``

 - removed dependency to ``transaction``

 - do not pipe stderr in base server layer to prevent overflow because
   it never gets read

2010/10/22 0.1.2
================

 - look form mysqld in relative libexec dir in mysql layer

2010/10/22 0.1.1
================

 - allow setting the mysql_bin_dir in layer and server

2010/07/14 0.1.0
================

 - fix wait interval in isUp check in server layer

 - use hashlib instead of sha, to avoid deprecation warnings. Only
   works with python >= 2.5

2010/03/08 0.1.0a7
==================

 - made mysql layer aware to handle multiple instances of mysqld in parallel


2010/02/03 0.1.0a6
==================

 - added additional argument to set nginx configuration file. usefull if
   desired config is not located under given prefix


2009/12/09 0.1.0a5
==================

 - factored out the server part of the memcached layer, this could now
   be used for any server implementations, see ``memcached.py`` as an
   example how to use it.


2009/11/02 0.1.0a4
==================

 - raising a proper exception if mysqld was not found (fixes #3)

 - moved dependency for 'transaction' to extras[pgsql] (fixes #2)

 - fixed wrong path for dump databases in layer. (fixes #1)


2009/10/30 0.1.0a3
==================
